force-app/main/default/objects/QuoteLineItem/fields/Add_on__c.field-meta.xml
<CustomField>
    <fullName>Add_on__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to add-on record for this line item</description>
    <label>Add-on</label>
    <referenceTo>Add_on__c</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>Quote_Line_Items_Addons</relationshipName>
    <type>Lookup</type>
</CustomField>