force-app/main/default/objects/QuoteLineItem/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <label>Cost</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
    <description>Per unit cost for this line item</description>
</CustomField>