force-app/main/default/objects/QuoteLineItem/fields/Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount__c</fullName>
    <label>Discount Amount</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
    <formula>Quantity * UnitPrice * BLANKVALUE(Discount, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <description
  >Calculated discount amount for the line item. Discount field is already a decimal in formula context.</description>
</CustomField>