force-app/main/default/objects/QuoteLineItem/fields/Duration_Hours__c.field-meta.xml
<CustomField>
    <fullName>Duration_Hours__c</fullName>
    <description>Duration in hours for this line item</description>
    <label>Duration Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>