force-app/main/default/objects/QuoteLineItem/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <description
  >Line item margin: (UnitPrice * Quantity * (1 - Discount/100)) - (Cost__c * Quantity)</description>
    <formula>(UnitPrice * Quantity) - Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>