force-app/main/default/objects/QuoteLineItem/fields/Margin_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Margin_Percentage__c</fullName>
    <label>Margin Percentage</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
    <formula>IF(UnitPrice = 0, 0, (Margin__c / UnitPrice) * 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <description>Margin percentage: (Margin / UnitPrice) * 100</description>
</CustomField>