force-app/main/default/objects/QuoteLineItem/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <description>Phase name for grouping quote line items</description>
    <label>Phase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>